# jxbackend2

./: .env  .gitignore  ddl2struct.py  meson.build  meson_options.txt
migrate/: cas.h  cas.sql  dcb.sql  produto.h  produto.sql
src/: main.cpp
src/models/: dcb_model.h  produto_model.h
src/resources/: enums.h  http.h  jxobject.h
src/resources/database/: database.h  databaseSingleto.h  field  postgresDb.h  query.h  record.h
src/resources/database/fields/: boolfield.h  charfield.h  datetimefield.h  field.h  floatfield.h  integerfield.h  moneyfield.h  stringfield.h
src/resources/exceptions/: database_exception.h  exceptions.h
src/resources/utils/: print.h  strconv.h  util
src/routes/: cas_route.h  dcb_route.h  produto_route.h  route
